--- a/Salut/SALMainViewController.xib
+++ b/Salut/SALMainViewController.xib
@@ -8,6 +8,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SALMainViewController">
             <connections>
+                <outlet property="contentWebView" destination="Q7M-K8-cdT" id="sab-IA-pvV"/>
                 <outlet property="messageTextField" destination="XXw-xP-QKG" id="QME-iF-9vo"/>
                 <outlet property="view" destination="1" id="2"/>
             </connections>
