--- a/Salut/SALMainViewController.xib
+++ b/Salut/SALMainViewController.xib
@@ -17,10 +17,10 @@
         <customObject id="-3" userLabel="Application"/>
         <customView id="1">
             <rect key="frame" x="0.0" y="0.0" width="606" height="416"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" id="XXw-xP-QKG">
-                    <rect key="frame" x="0.0" y="0.0" width="606" height="22"/>
+                    <rect key="frame" x="0.0" y="0.0" width="592" height="22"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="jnD-kM-8XG">
                         <font key="font" metaFont="system"/>
